# MedSoft

./: README.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_04_01_1701-e9e26eb1913f_first.py
backend/api_v1/: __init__.py
backend/api_v1/clinic_api/: dependencies.py  views.py
backend/api_v1/filial_api/: dependencies.py  views.py
backend/clinic_app/: clinic_repository.py  clinic_service.py  models.py  schemas.py
backend/core/: __init__.py  base_unit_of_work.py  db_manager.py  setings.py
backend/filial_app/: crud.py  models.py  schemas.py
